Interface gráfica do autômato finalizada